@@ -1,13 +1,23 @@
 package org.jenga.dantong.global.config;
 
-import java.util.Collections;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.servlet.http.HttpServletRequest;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Locale;
 import lombok.RequiredArgsConstructor;
 import org.jenga.dantong.global.auth.CustomAccessDeniedHandler;
 import org.jenga.dantong.global.auth.CustomAuthenticationEntryPoint;
 import org.jenga.dantong.global.auth.JwtAuthenticationFilter;
 import org.jenga.dantong.global.auth.jwt.JwtProvider;
+import org.jenga.dantong.global.error.ExceptionHandlerFilter;
+import org.springframework.context.MessageSource;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.support.MessageSourceAccessor;
+import org.springframework.context.support.ResourceBundleMessageSource;
+import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -17,8 +27,14 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.servlet.util.matcher.MvcRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.LocaleResolver;
+import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
+import org.springframework.web.servlet.i18n.AcceptHeaderLocaleResolver;
+import org.springframework.web.servlet.i18n.LocaleChangeInterceptor;
 
 @Configuration
 @EnableWebSecurity
@@ -33,7 +49,63 @@ public class SecurityConfig {
 
     private final JwtProvider jwtProvider;
 
+    private final ObjectMapper objectMapper;
 
+
+    @Bean
+    public LocaleResolver localeResolver() {
+        CustomLocaleResolver customLocaleResolver = new CustomLocaleResolver();
+        customLocaleResolver.setDefaultLocale(Locale.KOREA);
+        return customLocaleResolver;
+    }
+
+
+    @Bean
+    public LocaleChangeInterceptor localeChangeInterceptor() {
+        LocaleChangeInterceptor lci = new LocaleChangeInterceptor();
+        lci.setParamName("lang");
+        return lci;
+    }
+
+
+    @Bean
+    public MessageSource messageSource() {
+        ResourceBundleMessageSource messageSource = new ResourceBundleMessageSource();
+        messageSource.setBasename("messages");
+        messageSource.setDefaultEncoding("UTF-8");
+        messageSource.setCacheSeconds(60);
+        messageSource.setUseCodeAsDefaultMessage(true);
+        return messageSource;
+    }
+
+    @Bean(name = "messageSourceAccessor")
+    public MessageSourceAccessor messageSourceAccessor(MessageSource messageSource) {
+        return new MessageSourceAccessor(messageSource, Locale.getDefault());
+    }
+
+
+    public static class CustomLocaleResolver extends AcceptHeaderLocaleResolver {
+
+        String[] mLanguageCode = new String[]{"ko", "en"};
+        List<Locale> mLocales = Arrays.asList(new Locale("en"), new Locale("es"), new Locale("ko"));
+
+        @Override
+        public Locale resolveLocale(HttpServletRequest request) {
+            // 언어팩 변경
+            String acceptLanguage = request.getHeader(HttpHeaders.ACCEPT_LANGUAGE);
+            if (acceptLanguage == null || "".equals(acceptLanguage)) {
+                return Locale.getDefault();
+            }
+            List<Locale.LanguageRange> list = Locale.LanguageRange.parse(
+                request.getHeader("Accept-Language"));
+
+            mLocales = new ArrayList<>();
+            for (String code : mLanguageCode) {
+                mLocales.add(new Locale(code));
+            }
+            return Locale.lookup(list, mLocales);
+        }
+    }
 
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter() {
@@ -55,6 +127,11 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
+    @Bean
+    public ExceptionHandlerFilter exceptionHandlerFilter() {
+        return new ExceptionHandlerFilter(objectMapper, messageSource());
+    }
+
     private static final String[] PUBLIC_URI = {
         "/swagger-ui/**", "/api-docs/**", "/test/**"
     };
@@ -63,26 +140,43 @@ public class SecurityConfig {
         "/admin/**"
     };
 
+    @Bean
     CorsConfigurationSource corsConfigurationSource() {
-        return request -> {
-            CorsConfiguration config = new CorsConfiguration();
-            config.setAllowedHeaders(Collections.singletonList("*"));
-            config.setAllowedMethods(Collections.singletonList("*"));
-            config.setAllowCredentials(true);
-            return config;
-        };
+        CorsConfiguration config = new CorsConfiguration();
+
+        config.setAllowCredentials(true);
+        config.addAllowedOriginPattern("*");
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        return source;
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain filterChain(HttpSecurity http,
+        HandlerMappingIntrospector introspector) throws Exception {
         return http
-            .cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()))
-            .csrf(AbstractHttpConfigurer::disable)
-            .sessionManagement(sessionManagement -> sessionManagement.sessionCreationPolicy(
-                SessionCreationPolicy.STATELESS))
-            .formLogin(AbstractHttpConfigurer::disable)
-            .httpBasic(AbstractHttpConfigurer::disable)
+                .cors(httpSecurityCorsConfigurer -> corsConfigurationSource())
+                .csrf(AbstractHttpConfigurer::disable)
+                .sessionManagement(sessionManagement -> sessionManagement.sessionCreationPolicy(
+                        SessionCreationPolicy.STATELESS))
+                .formLogin(AbstractHttpConfigurer::disable)
+                .httpBasic(AbstractHttpConfigurer::disable)
+                .authorizeHttpRequests(authorizeRequests -> {
+                    authorizeRequests.requestMatchers(
+                            new MvcRequestMatcher(introspector, "/swagger-ui/**")).permitAll();
+                    authorizeRequests.requestMatchers("/v3/api-docs/**",
+                            "/webjars/**").permitAll();
+                    authorizeRequests.requestMatchers("/post/**").permitAll();
+                    authorizeRequests.requestMatchers("/user/**").permitAll();
+                    authorizeRequests.requestMatchers("/survey/**").permitAll();
+                    authorizeRequests.requestMatchers("/reply/**").permitAll();
+
+            })
             .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
+            .addFilterBefore(exceptionHandlerFilter(), JwtAuthenticationFilter.class)
             .exceptionHandling(c -> c.authenticationEntryPoint(customAuthenticationEntryPoint())
                 .accessDeniedHandler(customAccessDeniedHandler()))
             .build();
